Created an English UI